grocy/grocy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.9.0 (093c756)
  creationTimestamp: null
  labels:
    io.kompose.service: grocy
  name: grocy
  namespace: homeautomation
spec:
  ports:
  - name: "6781"
    port: 6781
    targetPort: 80
  selector:
    io.kompose.service: grocy
status:
  loadBalancer: {}
