grocy/grocy-ingress-external.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grocy-external
  namespace: homeautomation
  labels:
    traffic-type: external
  annotations:
    traefik.frontend.rule.type: PathPrefix
    #traefik.frontend.redirect.regex: ^http://(.*)
    #traefik.frontend.redirect.replacement: https://$1
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: ingress-auth
spec:
  rules:
  - host: grocy.cloud.anjokolk.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grocy
          servicePort: 6781
  - host: grocy.cloud.oraperf.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grocy
          servicePort: 6781
